fix: restore headers alignment

--- a/assets/stylesheets/pm_dashboard.css
+++ b/assets/stylesheets/pm_dashboard.css
@@ -1,18 +1,7 @@
-table#pm_dashboard_header {
-  width: 95%;
-  margin: auto;
-}
-
-table#pm_dashboard_header tr td span {
-  font-weight: bold;
-  display: inline-block;
-  width: 135px;
-  text-align: left;
-  padding-right: 10px
-}
-
-table#pm_dashboard_header tr td span.column1 { width: 95px; }
-pm_dashboard_header { width: 75% }
+table#pm_dashboard_header tr td { white-space: nowrap; padding-right: 9px;}
+table#pm_dashboard_header tr td span {font-weight: bold; display: inline-block; text-align: left; }
+table#pm_dashboard_header tr td span:after { content: ":" }
+pm_dashboard_header { width: 85% }
 
 .nodata {
   text-align: center;
